# apple-mail-fast-mcp

./: AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  justfile  pyproject.toml
.claude/: CLAUDE.md
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/release/: SKILL.md
.github/workflows/: dependency-audit.yml  release-hygiene.yml  release.yml  test.yml
deploy/macos/: studio.peacockery.apple-mail-mcp-helper.plist  studio.peacockery.apple-mail-mcp.plist
docs/guides/: CLIENT_SERVER_PARITY.md  DEVELOPMENT.md  REMOTE_SERVICE.md  SECURITY_CHECKLIST.md  TESTING.md  THREAT_MODEL.md
docs/reference/: ARCHITECTURE.md  TOOLS.md
evals/agent_tool_usability/: tool_descriptions.md
mcpb/: manifest.json
native/macos-helper/: AppleMailMCPHelper.swift  Info.plist
scripts/: apple-mail-mcp-headers.sh  check_client_server_parity.py  check_docs.py  check_test_policy.py  check_version_sync.sh  create-macos-signing-identity.sh  install-macos-helper.sh  install-macos-launch-agent.sh
src/apple_mail_fast_mcp/: cli.py  draft_builder.py  drafts.py  exceptions.py  imap_connector.py  imap_overrides.py  imap_providers.py  keychain.py  mail_connector.py  secret_file.py  security.py  server.py  smtp_sender.py  templates.py  utils.py
tests/: conftest.py
tests/integration/: test_mail_integration.py
tests/live/: test_escaping_property.py  test_mail_integration.py
tests/regressions/: conftest.py  test_cli.py  test_draft_builder.py  test_imap_connector.py  test_imap_pool.py  test_mail_connector.py  test_message_management.py  test_security.py  test_server.py  test_smtp_sender.py  test_stdio_transport.py
tests/unit/: conftest.py  test_cli.py  test_draft_builder.py  test_http_guard.py  test_imap_connector.py  test_imap_overrides.py  test_imap_providers.py  test_keychain.py  test_mail_connector.py  test_secret_file.py  test_security.py  test_server.py  test_smtp_sender.py
