[project]
name = "apple-mail-fast-mcp"
version = "0.10.2"
description = "Private MCP access to Apple Mail"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.3.1",
    "imapclient>=3.1.0",
    "uvicorn>=0.51.0",
]

[project.scripts]
apple-mail-fast-mcp = "apple_mail_fast_mcp.server:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.100.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
    "ty>=0.0.55",
    "vulture>=2.16",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "CPY", # This private project does not impose per-file copyright headers.
    # Ruff documents these as incompatible with its formatter.
    "W191", "E111", "E114", "E117", "D203", "D206", "D213", "D300",
    "Q000", "Q001", "Q002", "Q003", "Q004", "COM812", "COM819", "ISC002",
    # Existing narrative docstrings are useful without NumPy-style boilerplate.
    "D", "DOC",
    # Apple events, MCP payloads, and email parsers have genuinely dynamic boundaries.
    "ANN401",
    # Public MCP signatures and connector methods are compatibility surfaces.
    "A002", "ARG002", "FBT001", "FBT002", "PLR0904", "PLR0911", "PLR0912",
    "PLR0913", "PLR0914", "PLR0917", "PLR2004", "PLR6301", "C901",
    # Fallback orchestration intentionally catches, logs, and translates failures.
    "BLE001", "TRY003", "TRY300", "TRY301", "TRY400", "TRY401", "PLW0717",
    "EM101", "EM102",
    # CLI output is the interface, and typographic punctuation is intentional prose.
    "T201", "RUF001", "RUF002", "RUF003",
    # AppleScript source is embedded as Python strings and cannot be formatter-wrapped.
    "E501",
    # Explicit branches are clearer than nested conditional expressions here.
    "SIM108",
    # These names describe provider URLs and environment keys, not embedded secrets.
    "S105", "S106",
    # ``today`` intentionally follows the Mac's local calendar date.
    "DTZ011",
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"scripts/check_*.py" = ["INP001"]
"src/apple_mail_fast_mcp/cli.py" = ["SLF001"]
"src/apple_mail_fast_mcp/keychain.py" = ["S404", "S603"]
"src/apple_mail_fast_mcp/mail_connector.py" = ["S404", "S603"]
"src/apple_mail_fast_mcp/security.py" = ["S404", "S603"]
"tests/**/*.py" = [
    "ANN", "ARG", "DTZ", "PLC0415", "PLC1901", "PLC2701", "PLR", "PT", "S",
    "SLF001", "TC",
]

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.rules]
all = "error"

[tool.ty.terminal]
error-on-warning = true

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
filterwarnings = ["error"]
markers = [
    "live: test real Apple Mail, IMAP, SMTP, or MCP behavior",
    "live_send: send a real message when explicitly enabled",
    "regression: pin a documented bug or issue",
    "allow_real_io: permit deliberate socket access in a regression",
    "real_account_fallback: exercise the real account name and UUID fallback",
]
testpaths = ["tests/regressions"]
